package eapli.base.Warehouse.repositories;


import eapli.base.Warehouse.domain.AGVDock;
import eapli.base.Warehouse.domain.AGVDockIdentifier;
import eapli.framework.domain.repositories.DomainRepository;

public interface AGVDockRepository  extends DomainRepository<AGVDockIdentifier, AGVDock> {

}
