package eapli.base.Warehouse.repositories;

import eapli.base.Warehouse.domain.Aisle;
import eapli.base.Warehouse.domain.AisleIdentifier;
import eapli.framework.domain.repositories.DomainRepository;

public interface AisleRepository extends DomainRepository<AisleIdentifier, Aisle> {
}
